# oracle-database-cman

./: .gitignore  BACKLOG.md  CONTINUITY.md  DEMO.md  DEPLOY.md  README.md  REFERENCE.md  cman-showcase-design.md  manage.py  pyproject.toml
ansible/: cman.yml  db.yml  ops.yml
ansible/roles/cman/defaults/: main.yml
ansible/roles/cman/handlers/: main.yml
ansible/roles/cman/tasks/: main.yml
ansible/roles/cman/templates/: cman.ora.j2
ansible/roles/db/tasks/: main.yml
ansible/roles/ops/tasks/: main.yml
ansible/roles/ops/templates/conn/: cman.sql.j2
demo/: README.md  compose.yaml  run-dumb.sh  run-smart.sh  run-workload.sh
demo/grafana/dashboards/: cman-resiliency.json
demo/grafana/provisioning/dashboards/: dashboards.yaml
demo/grafana/provisioning/datasources/: influxdb.yaml
demo/workload/: build.gradle.kts  settings.gradle.kts
demo/workload/src/main/java/com/example/cman/: Launcher.java  SmartWorkload.java  Telemetry.java  Workload.java
infra/terraform/: artifacts.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/modules/cman/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/db_system/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/network/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ops/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ops/userdata/: bootstrap.tftpl
tests/: test_config.py
